fixed loader jumping and implemented no-residents case

--- a/src/index.scss
+++ b/src/index.scss
@@ -30,16 +30,16 @@ a:hover {
   width: 85px;
 }
 
-.w-10 {
-  width: 10%;
-}
-
 .scale-0 {
   transform: scale(0);
 }
 
 .min-height-400 {
   min-height: 400px;
+}
+
+.mt-m56 {
+  margin-top: -56px;
 }
 
 .col-2-5 {
